# raspi-smarthome

./: .env.example  .gitignore  IMPLEMENTATION_STATUS.md  RASPI_CAPABILITIES.md  README.md  audio_agent.service  implementation_plan.md  install.sh  launch.sh  main.py  pyproject.toml  requirements.txt  test.sh
audio_agent/: __init__.py  audio_capture.py  config.py  main.py  wake_word.py  websocket_client.py
frontend/: package-lock.json  package.json
frontend/src/: App.jsx  index.css
frontend/src/components/: Clock.jsx  PhotoFrame.jsx  TranscriptionOverlay.jsx
gui_app/: audio_integration.py  main.py  styles.py  window.py
gui_app/screens/: clock.py  photos.py
