[project]
name = "raspi-smarthome"
version = "0.1.0"
description = "Raspberry Pi Audio Agent for Smart Home Voice Assistant"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "numpy<2",
    "openwakeword>=0.6.0",
    "pyaudio>=0.2.14",
    "websockets>=12.0",
    "python-dotenv>=1.0.0",
]
